# llm_assistant_app

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy
llm_assistant_app/: app.py
llm_assistant_app/src/: __init__.py
llm_assistant_app/src/api/: __init__.py
llm_assistant_app/src/ui/: __init__.py
resources/: .env.template
test/: test_app.py
